# ContextAPI

./: .gitignore  main.py  pyproject.toml
context_api/: api.py
requirements/: base.txt
src/context_api/: api.py  app.py
test/integration_tests/data_manager_test/: config.ini
