[tool.poetry]
name = "ContextAPI"
version = "0.1.0"
description = "The API for user friendly system for semantic search."
authors = [
    "ArturOle"
]
license = "GPL-3.0"
readme = "README.md"
keywords = ["semantic search", "ocr", "rag", "document-embedding", "contextual-search", "retrieval-augmented-generation", "pdf"]
packages = [{include = "context_api", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
contextsearch = { git = "https://github.com/ArturOle/ContextSearch.git", branch = "master" }
fastapi = "^0.112.0"
uvicorn = "^0.31.0"
python-multipart = "^0.0.12"
aiofiles = "^24.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-mock =  "^3.14.0"
pytest-cov = "^5.0.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
